# word-frequency-044b58fe-bbcc-476b-8e86-b6277067a6ba

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
api/: app.py  models.py
services/: wikipedia.py
tests/: test_app.py  test_wikipedia.py
utils/: logger.py
